--- a/settings.json
+++ b/settings.json
@@ -18,31 +18,20 @@
    */
   "favicon": "favicon.ico",
 
-  /*
-   * Skin name.
-   *
-   * Its value has to be an existing directory under src/static/skins.
-   * You can write your own, or use one of the included ones:
-   *
-   * - "no-skin":  an empty skin (default). This yields the unmodified,
-   *               traditional Etherpad theme.
-   * - "colibris": the new experimental skin (since Etherpad 1.8), candidate to
-   *               become the default in Etherpad 2.0
-   */
-  "skinName": "no-skin",
+  "skinName": "colibris",
 
   /*
    * IP and port which etherpad should bind at
    */
   "ip": "0.0.0.0",
-  "port" : 9001,
+  "port": 9001,
 
   /*
    * Option to hide/show the settings.json in admin page.
    *
    * Default option is set to true
    */
-  "showSettingsInAdminPage" : true,
+  "showSettingsInAdminPage": true,
 
   /*
    * Node native SSL support
@@ -52,13 +41,10 @@
    * that the Etherpad server can access them
    */
 
-  /*
-  "ssl" : {
-            "key"  : "/path-to-your/epl-server.key",
-            "cert" : "/path-to-your/epl-server.crt",
-            "ca": ["/path-to-your/epl-intermediate-cert1.crt", "/path-to-your/epl-intermediate-cert2.crt"]
-          },
-  */
+  // "ssl": {
+  //   "key": "/home/ubuntu/etherpad-lite/etherpad.key",
+  //   "cert": "/home/ubuntu/etherpad-lite/etherpad_tetrika-school_ru.crt"
+  // },
 
   /*
    * The type of the database.
@@ -78,10 +64,10 @@
    * https://www.npmjs.com/package/ueberdb2
    */
 
-  "dbType" : "dirty",
-  "dbSettings" : {
-                   "filename" : "var/dirty.db"
-                 },
+  "dbType": "dirty",
+  "dbSettings": {
+    "filename": "var/dirty.db"
+  },
 
   /*
    * An Example of MySQL Configuration (commented out).
@@ -104,7 +90,7 @@
   /*
    * The default text of a pad
    */
-  "defaultPadText" : "Welcome to Etherpad!\n\nThis pad text is synchronized as you type, so that everyone viewing this page sees the same text. This allows you to collaborate seamlessly on documents!\n\nGet involved with Etherpad at http:\/\/etherpad.org\n",
+  "defaultPadText": "",
 
   /*
    * Default Pad behavior.
@@ -128,41 +114,59 @@
   /*
    * Pad Shortcut Keys
    */
-  "padShortcutEnabled" : {
-    "altF9"     : true, /* focus on the File Menu and/or editbar */
-    "altC"      : true, /* focus on the Chat window */
-    "cmdShift2" : true, /* shows a gritter popup showing a line author */
-    "delete"    : true,
-    "return"    : true,
-    "esc"       : true, /* in mozilla versions 14-19 avoid reconnecting pad */
-    "cmdS"      : true, /* save a revision */
-    "tab"       : true, /* indent */
-    "cmdZ"      : true, /* undo/redo */
-    "cmdY"      : true, /* redo */
-    "cmdI"      : true, /* italic */
-    "cmdB"      : true, /* bold */
-    "cmdU"      : true, /* underline */
-    "cmd5"      : true, /* strike through */
-    "cmdShiftL" : true, /* unordered list */
-    "cmdShiftN" : true, /* ordered list */
-    "cmdShift1" : true, /* ordered list */
-    "cmdShiftC" : true, /* clear authorship */
-    "cmdH"      : true, /* backspace */
-    "ctrlHome"  : true, /* scroll to top of pad */
-    "pageUp"    : true,
-    "pageDown"  : true
+  "padShortcutEnabled": {
+    "altF9": true,
+    /* focus on the File Menu and/or editbar */
+    "altC": true,
+    /* focus on the Chat window */
+    "cmdShift2": true,
+    /* shows a gritter popup showing a line author */
+    "delete": true,
+    "return": true,
+    "esc": true,
+    /* in mozilla versions 14-19 avoid reconnecting pad */
+    "cmdS": true,
+    /* save a revision */
+    "tab": true,
+    /* indent */
+    "cmdZ": true,
+    /* undo/redo */
+    "cmdY": true,
+    /* redo */
+    "cmdI": true,
+    /* italic */
+    "cmdB": true,
+    /* bold */
+    "cmdU": true,
+    /* underline */
+    "cmd5": true,
+    /* strike through */
+    "cmdShiftL": true,
+    /* unordered list */
+    "cmdShiftN": true,
+    /* ordered list */
+    "cmdShift1": true,
+    /* ordered list */
+    "cmdShiftC": true,
+    /* clear authorship */
+    "cmdH": true,
+    /* backspace */
+    "ctrlHome": true,
+    /* scroll to top of pad */
+    "pageUp": true,
+    "pageDown": true
   },
 
   /*
    * Should we suppress errors from being visible in the default Pad Text?
    */
-  "suppressErrorsInPadText" : false,
+  "suppressErrorsInPadText": false,
 
   /*
    * If this option is enabled, a user must have a session to access pads.
    * This effectively allows only group pads to be accessed.
    */
-  "requireSession" : false,
+  "requireSession": false,
 
   /*
    * Users may edit pads but not create new ones.
@@ -170,13 +174,13 @@
    * Pad creation is only via the API.
    * This applies both to group pads and regular pads.
    */
-  "editOnly" : false,
+  "editOnly": false,
 
   /*
    * If set to true, those users who have a valid session will automatically be
    * granted access to password protected pads.
    */
-  "sessionNoPassword" : false,
+  "sessionNoPassword": false,
 
   /*
    * If true, all css & js will be minified before sending to the client.
@@ -184,7 +188,7 @@
    * This will improve the loading performance massively, but makes it difficult
    * to debug the javascript/css
    */
-  "minify" : true,
+  "minify": true,
 
   /*
    * How long may clients use served javascript code (in seconds)?
@@ -192,7 +196,7 @@
    * Not setting this may cause problems during deployment.
    * Set to 0 to disable caching.
    */
-  "maxAge" : 21600, // 60 * 60 * 6 = 6 hours
+  "maxAge": 21600, // 60 * 60 * 6 = 6 hours
 
   /*
    * Absolute path to the Abiword executable.
@@ -201,7 +205,7 @@
    * it to null disables Abiword and will only allow plain text and HTML
    * import/exports.
    */
-  "abiword" : null,
+  "abiword": null,
 
   /*
    * This is the absolute path to the soffice executable.
@@ -209,7 +213,7 @@
    * LibreOffice can be used in lieu of Abiword to export pads.
    * Setting it to null disables LibreOffice exporting.
    */
-  "soffice" : null,
+  "soffice": null,
 
   /*
    * Path to the Tidy executable.
@@ -217,35 +221,35 @@
    * Tidy is used to improve the quality of exported pads.
    * Setting it to null disables Tidy.
    */
-  "tidyHtml" : null,
+  "tidyHtml": null,
 
   /*
    * Allow import of file types other than the supported ones:
    * txt, doc, docx, rtf, odt, html & htm
    */
-  "allowUnknownFileEnds" : true,
+  "allowUnknownFileEnds": true,
 
   /*
    * This setting is used if you require authentication of all users.
    *
    * Note: "/admin" always requires authentication.
    */
-  "requireAuthentication" : false,
+  "requireAuthentication": false,
 
   /*
    * Require authorization by a module, or a user with is_admin set, see below.
    */
-  "requireAuthorization" : false,
+  "requireAuthorization": false,
 
   /*
    * When you use NGINX or another proxy/load-balancer set this to true.
    */
-  "trustProxy" : false,
+  "trustProxy": true,
 
   /*
    * Privacy: disable IP logging
    */
-  "disableIPlogging" : false,
+  "disableIPlogging": false,
 
   /*
    * Time (in seconds) to automatically reconnect pad when a "Force reconnect"
@@ -253,7 +257,7 @@
    *
    * Set to 0 to disable automatic reconnection.
    */
-  "automaticReconnectionTimeout" : 0,
+  "automaticReconnectionTimeout": 0,
 
   /*
    * By default, when caret is moved out of viewport, it scrolls the minimum
@@ -307,25 +311,25 @@
    *          follow the section "secure your installation" in README.md
    */
 
-  /*
+
   "users": {
     "admin": {
       // "password" can be replaced with "hash" if you install ep_hash_auth
-      "password": "changeme1",
+      "password": "kokoko78",
       "is_admin": true
     },
     "user": {
       // "password" can be replaced with "hash" if you install ep_hash_auth
-      "password": "changeme1",
+      "password": "kokoko79",
       "is_admin": false
     }
   },
-  */
+
 
   /*
    * Restrict socket.io transport methods
    */
-  "socketTransportProtocols" : ["xhr-polling", "jsonp-polling", "htmlfile"],
+  "socketTransportProtocols": ["xhr-polling", "jsonp-polling", "htmlfile"],
 
   /*
    * Allow Load Testing tools to hit the Etherpad Instance.
@@ -381,11 +385,11 @@
    *
    * You can add as many appenders as you want here.
    */
-  "logconfig" :
-    { "appenders": [
-        { "type": "console"
+  "logconfig": {
+    "appenders": [{
+        "type": "console"
         //, "category": "access"// only logs pad access
-        }
+      }
 
       /*
       , { "type": "file"
@@ -424,6 +428,6 @@
         }
       */
 
-      ]
-    } // logconfig
+    ]
+  } // logconfig
 }
